tests/snapshots/integration_tests__example_08-tuples.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Add:
  inputs:
    left: [*shape]
    right: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Add

neuron Fork:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
  impl:
    Source: core,builtin/Fork

neuron Fork3:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
    c: [*shape]
  impl:
    Source: core,builtin/Fork3

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,nn/Linear

neuron NestedTuples(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> Fork#6()
    Fork#6() -> (path1, path2)
    path1 -> Fork#7()
    Fork#7() -> (p1a, p1b)
    (p1a, path2) -> Add#8()
    Add#8() -> out

neuron ResidualWithTuple(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> Fork#9()
    Fork#9() -> (main, skip)
    main -> Linear#10(dim, dim)
    Linear#10(dim, dim) -> processed
    (processed, skip) -> Add#11()
    Add#11() -> out

neuron ThreeWayFork:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 512]
  graph:
    in -> Fork3#4()
    Fork3#4() -> (a, b, c)
    a -> Linear#5(512, 512)
    Linear#5(512, 512) -> out

neuron TupleInput:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 512]
  graph:
    in -> Fork#2()
    Fork#2() -> (left, right)
    (left, right) -> Add#3()
    Add#3() -> out

neuron TupleUnpack:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 512]
  graph:
    in -> Fork#0()
    Fork#0() -> (branch_a, branch_b)
    branch_a -> Linear#1(512, 512)
    Linear#1(512, 512) -> out
