tests/snapshots/integration_tests__example_09-port-access.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Add:
  inputs:
    left: [*shape]
    right: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Add

neuron BothBranches:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 512]
  graph:
    in -> Fork#2()
    Fork#2() -> (main, skip)
    main -> Linear#3(512, 512)
    Linear#3(512, 512) -> processed
    (processed, skip) -> Add#4()
    Add#4() -> out

neuron Fork:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
  impl:
    Source: core,builtin/Fork

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,nn/Linear

neuron NestedFork(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> Fork#5()
    Fork#5() -> (first, second)
    first -> Fork#6()
    Fork#6() -> (a, b)
    (a, second) -> Add#7()
    Add#7() -> out

neuron TupleUnpack:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 512]
  graph:
    in -> Fork#0()
    Fork#0() -> (left_branch, right_branch)
    left_branch -> Linear#1(512, 512)
    Linear#1(512, 512) -> out
