tests/snapshots/integration_tests__example_11-calls.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron BoolArgs:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 256]
  graph:
    in -> CustomLayer#8(512, 256, enabled=true)
    CustomLayer#8(512, 256, enabled=true) -> out

neuron CustomLayer(in_dim, out_dim, scale = 1, offset = 0, enabled = true):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,custom/Layer

neuron Dropout(p = 0.1):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/Dropout

neuron ExpressionArgs(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, (dim * 4)]
  graph:
    in -> Linear#5(dim, (dim * 4))
    Linear#5(dim, (dim * 4)) -> out

neuron FloatArgs:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 512]
  graph:
    in -> Dropout#7(p=0.25)
    Dropout#7(p=0.25) -> out

neuron KeywordOnly:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 512]
  graph:
    in -> Dropout#2(p=0.5)
    Dropout#2(p=0.5) -> out

neuron Linear(in_dim, out_dim, bias = true):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,nn/Linear

neuron MixedArgs:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 256]
  graph:
    in -> Linear#3(512, 256, bias=false)
    Linear#3(512, 256, bias=false) -> out

neuron MultipleKeywords:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 256]
  graph:
    in -> CustomLayer#4(512, 256, scale=2, offset=10, enabled=false)
    CustomLayer#4(512, 256, scale=2, offset=10, enabled=false) -> out

neuron NegativeArgs:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 256]
  graph:
    in -> CustomLayer#6(512, 256, scale=(0 - 1), offset=(0 - 10))
    CustomLayer#6(512, 256, scale=(0 - 1), offset=(0 - 10)) -> out

neuron NoArgCall:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 512]
  graph:
    in -> Dropout#0()
    Dropout#0() -> out

neuron PositionalOnly:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 256]
  graph:
    in -> Linear#1(512, 256)
    Linear#1(512, 256) -> out

neuron StringArgs:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 512]
  impl:
    External with kwargs: model="gpt-4", mode="fast"
