tests/snapshots/integration_tests__example_12-expressions.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Addition(dim):
  inputs:
    default: [batch, dim]
  outputs:
    default: [batch, (dim + 128)]
  impl:
    Source: core,nn/Linear

neuron Division(dim):
  inputs:
    default: [batch, dim]
  outputs:
    default: [batch, (dim / 2)]
  impl:
    Source: core,nn/Linear

neuron ExprInCall(dim):
  inputs:
    default: [batch, dim]
  outputs:
    default: [batch, dim]
  graph:
    in -> Linear#0(dim, ((dim * 2) + 128))
    Linear#0(dim, ((dim * 2) + 128)) -> out

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,nn/Linear

neuron LiteralExpr(dim = 512):
  inputs:
    default: [batch, dim]
  outputs:
    default: [batch, (dim + 512)]
  impl:
    Source: core,nn/Linear

neuron Multiplication(dim):
  inputs:
    default: [batch, dim]
  outputs:
    default: [batch, (dim * 4)]
  impl:
    Source: core,nn/Linear

neuron NegativeExpr(dim, offset = (0 - 10)):
  inputs:
    default: [batch, dim]
  outputs:
    default: [batch, (dim + offset)]
  impl:
    Source: core,nn/Linear

neuron Subtraction(dim):
  inputs:
    default: [batch, dim]
  outputs:
    default: [batch, (dim - 64)]
  impl:
    Source: core,nn/Linear
