tests/snapshots/integration_tests__example_16-recursion.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Uses ===
use nn::Identity (source: core)

=== Neurons ===

neuron Identity:
  inputs:
    default: [*]
  outputs:
    default: [*]
  impl:
    Source: core,nn/Identity

neuron MyNeuron(d_model, num_heads, d_ff, depth):
  inputs:
    default: [*, seq, d_model]
  outputs:
    default: [*, seq, d_model]
  let:
    recurse = MyNeuron(...)
  graph:
    in -> match:
      [*, seq, d_model] where (depth > 0): recurse
      [*, seq, d_model]: Identity#0() -> out
