tests/snapshots/integration_tests__example_16-recursion_error.snap
---
source: tests/integration_tests.rs
expression: error_text
---
Parse error: Unexpected { found: "Ident(\"let\")", span: SourceSpan { offset: SourceOffset(191), length: 3 } }
