tests/snapshots/integration_tests__example_18-adaptive-projection.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron AdaptiveProjection:
  inputs:
    default: [*, *]
  outputs:
    default: [*, 512]
  graph:
    in -> match:
      [*, 512]: Identity#0() -> out
      [*, 256]: Linear#1(256, 512) -> out
      [*, d] where (d > 512): Linear#2(d, 512) -> out
      [*, d]: Linear#3(d, 512) -> out

neuron Identity:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/Identity

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,nn/Linear

neuron ShapeAdaptive:
  inputs:
    default: [*shape]
  outputs:
    default: [*, 512]
  graph:
    in -> match:
      [*, 512]: Identity#11() -> out
      [*, *, 512]: Identity#12() -> out
      [*, d]: Linear#13(d, 512) -> out
      [*, *, d]: Linear#14(d, 512) -> out
      [*dims, d]: Linear#15(d, 512) -> out

neuron SmartCompression:
  inputs:
    default: [*, dim]
  outputs:
    default: [*, 128]
  graph:
    in -> match:
      [*, d] where (d > 2048): Linear#4(d, 1024) -> Linear#5(1024, 512) -> Linear#6(512, 128) -> out
      [*, d] where (d > 512): Linear#7(d, 256) -> Linear#8(256, 128) -> out
      [*, d] where (d > 128): Linear#9(d, 128) -> out
      [*, d]: Identity#10() -> out
